# stein_thinning

./: .buildinfo  .gitignore  CNAME  LICENSE  MANIFEST.in  README.md  __init__.py  demo.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  stein.py  stein_thin.py
.github/workflows/: publish_pypi.yml  sphinx.yml
_autosummary/: stein_thinning.kernel.html  stein_thinning.kernel.make_imq.html  stein_thinning.kernel.make_precon.html  stein_thinning.kernel.vfk0_imq.html  stein_thinning.stein.html  stein_thinning.stein.kmat.html  stein_thinning.stein.ksd.html  stein_thinning.thinning.html  stein_thinning.thinning.thin.html  stein_thinning.thinning.thin_gf.html
_sources/_autosummary/: stein_thinning.kernel.make_imq.rst  stein_thinning.kernel.make_precon.rst  stein_thinning.kernel.rst  stein_thinning.kernel.vfk0_imq.rst  stein_thinning.stein.kmat.rst  stein_thinning.stein.ksd.rst  stein_thinning.stein.rst  stein_thinning.thinning.rst  stein_thinning.thinning.thin.rst  stein_thinning.thinning.thin_gf.rst
_static/: documentation_options.js
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md  index.rst
docs/source/_static/: style.css
sample_chains/gmm/: scr.csv  smp.csv
stein_thinning/: __init__.py  demo.py  kernel.py  stein.py  thinning.py  util.py
stein_thinning/demo/: gmm.py  gradient_free.py  pystan.py
stein_thinning/pystan/: demo.py
tests/stein_thinning/: conftest.py  test_kernel.py  test_stein.py  test_thinning.py
