# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stein_thinning"
version = "0.1.0"
description = "Optimally compress sampling algorithm outputs"
readme = "README.md"
authors = [{ name = "Stein Thinning team" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mcmc", "Stein", "thinning"]
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "sphinx"]
demo = ["matplotlib", "pystan"]

[project.urls]
Homepage = "https://github.com/wilson-ye-chen/stein_thinning"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"stein_thinning/__init__.py" = [
    '{version}',
]
"docs/source/conf.py" = [
    "release = '{version}'",
]